--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Jogo da Velha</h1>
+    <h1>Jogo da Velha 🎮</h1>
     <div id="board" class="board">
         <div class="cell" data-index="0"></div>
         <div class="cell" data-index="1"></div>
